@@ -1,3 +1,8 @@
+2008-02-27 Andreas Schmitz <schmitz@lat-lon.de>
+      src/org/openjump/util/CustomTexturePaint.java,
+      src/com/vividsolutions/jump/workbench/ui/style/BasicStylePanel.java:
+      Fixed smaller bugs concerning custom fill patterns from SVG.
+
 2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>
       scripts/openjump.bat:
       Removed redundant command line option.
